added preview image

--- a/back-end/views/postmaker.ejs
+++ b/back-end/views/postmaker.ejs
@@ -14,6 +14,10 @@
     <input type="text" id="title" name="title" required />
   </div>
   <div>
+    <label for="prevImages">First Image</label>
+    <input type="text" id="prevImages" name="prevImages" required />
+  </div>
+  <div>
     <label for="images">Images</label>
     <input type="text" id="images" name="images" required />
   </div>
